--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "angular": "^1.3.11",
     "angular-clipboard": "^1.3.0",
     "angular-route": "^1.3.11",
+    "angular-sanitize": "^1.5.0",
     "angular-toastr": "^1.7.0",
     "babel": "^5.8.12",
     "bcrypt": "^0.8.5",
