preparing fb auth

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "mongoose": "^4.2.4",
     "node-uuid": "^1.4.7",
     "passport": "^0.3.2",
+    "passport-facebook": "^2.1.0",
     "passport-local": "^1.0.0",
     "serve-favicon": "^2.3.0",
     "serve-static": "^1.10.0",
